define 4th route

--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -138,8 +138,7 @@
                         <img src="/white.png" alt="">
                     </figure>
     
-                    <p>Unlimited product updates
-                    </p>
+                    <p>Every feature in Figmaland</p>
                 </div>
 
                 <div class="price-features">
@@ -147,8 +146,7 @@
                         <img src="/white.png" alt="">
                     </figure>
     
-                    <p>Unlimited product updates
-                    </p>
+                    <p>1GB  Cloud storage</p>
                 </div>
 
                 <div class="price-features">
@@ -156,8 +154,7 @@
                         <img src="/ash.png" alt="">
                     </figure>
     
-                    <p>Unlimited product updates
-                    </p>
+                    <p>Email and community support </p>
                 </div>
 
 
