--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -105,7 +105,7 @@
             </div>
 
             <div class="amount">
-                <h2 class="primary-color">0</h2>
+                <h2 class="neutral1">10</h2>
 
                 <div>
                     <h4 class="primary-color">$</h4>
@@ -172,7 +172,7 @@
             </div>
 
             <div class="amount">
-                <h2 class="primary-color">0</h2>
+                <h2 class="primary-color">99</h2>
 
                 <div>
                     <h4 class="primary-color">$</h4>
@@ -196,8 +196,7 @@
                         <img src="/green.png" alt="">
                     </figure>
     
-                    <p>Unlimited product updates
-                    </p>
+                    <p>Unlimited Shares</p>
                 </div>
 
 
@@ -206,8 +205,7 @@
                         <img src="/green.png" alt="">
                     </figure>
     
-                    <p>Unlimited product updates
-                    </p>
+                    <p>Every feature in Figmaland </p>
                 </div>
 
                 <div class="price-features">
@@ -215,8 +213,7 @@
                         <img src="/ash.png" alt="">
                     </figure>
     
-                    <p>Unlimited product updates
-                    </p>
+                    <p>1GB  Cloud storage</p>
                 </div>
 
                 <div class="price-features">
@@ -224,8 +221,7 @@
                         <img src="/ash.png" alt="">
                     </figure>
     
-                    <p>Unlimited product updates
-                    </p>
+                    <p>Email and community support </p>
                 </div>
 
 
