--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -108,8 +108,8 @@
                 <h2 class="neutral1">10</h2>
 
                 <div>
-                    <h4 class="primary-color">$</h4>
-                    <h4 class="primary-color">Per Month</h4>
+                    <h4 class="neutral1">$</h4>
+                    <h4 class="neutral1">Per Month</h4>
                 </div>
             </div>
 
@@ -159,7 +159,7 @@
 
 
 
-                <button class="secondary-button">Order Now</button>
+                <button class="primary-button">Order Now</button>
             </div>
         </div>
 
