added another section

--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -234,6 +234,59 @@
 
     </section>
 
+
+
+    <section class="container">
+        <div class="card__sect">
+
+            <div class="card">
+                <div class="fit">
+                    <figure class="icons">
+                        <img src="/Vectordee.png" alt="">
+                    </figure>
+
+                    <h4 class="secondary-color">A modular UI kit</h4>
+                </div>
+
+                <p class="neutral2">Slate helps you see how many 
+                    more days you need to work to 
+                    reach your financial goal. </p>
+            </div>
+
+            <div class="card">
+                <div class="fit">
+                    <figure class="icons">
+                        <img src="/Vectordee-1.png" alt="">
+                    </figure>
+
+                    <h4 class="secondary-color">Handy plugins </h4>
+                </div>
+
+                <p class="neutral2">Slate helps you see how many 
+                    more days you need to work to 
+                    reach your financial goal. </p>
+            </div>
+
+
+            <div class="card">
+                <div class="fit">
+                    <figure class="icons">
+                        <img src="/Vectordee-2.png" alt="">
+                    </figure>
+
+                    <h4 class="secondary-color">Speedy build tools</h4>
+                </div>
+
+                <p class="neutral2">Slate helps you see how many 
+                    more days you need to work to 
+                    reach your financial goal. </p>
+            </div>
+
+
+
+        </div>
+    </section>
+
     
 
 
