--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -287,6 +287,41 @@
         </div>
     </section>
 
+
+
+    <section class="container">
+
+        <h2>FAQ</h2>
+
+    </section>
+
+
+    <section class="container">
+        <div class="faq">
+            <h4>Design with real data</h4>
+
+            <h4>Start working faster today</h4>
+
+            <h4>Just type what's on your mind and we'll get 
+                you there.</h4>
+
+            <h4> rename files and more. All without opening 
+                a single tab.</h4>
+        </div>
+
+        <div class="faq">
+            <h4>Just type what's on your mind and we'll get 
+                you there.</h4>
+
+            <h4>Rename files and more. All without opening 
+                a single tab.</h4>
+            
+            <h4>Design with real data</h4>
+
+            <h4>The best products start with Sketch</h4>
+        </div>
+    </section>
+
     
 
 
