--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -289,14 +289,13 @@
 
 
 
-    <section class="container">
-
-        <h2>FAQ</h2>
-
-    </section>
 
 
     <section class="container">
+
+        <div class="d">
+            <h2 class="primary-color">FAQ</h2>
+        </div>
         <div class="faq">
             <h4>Design with real data</h4>
 
@@ -319,6 +318,41 @@
             <h4>Design with real data</h4>
 
             <h4>The best products start with Sketch</h4>
+        </div>
+    </section>
+
+
+    <section class="container">
+
+        <h2>People are diggin’ it</h2>
+
+    </section>
+
+
+
+    <section class="container">
+
+        <div>
+            <figure>
+                <img src="" alt="">
+            </figure>
+
+            <p>Slate helps you see how 
+                many more days you need 
+                to work to reach your financial 
+                goal for the month and year.</p> 
+
+            <div>
+
+                <figure>
+                    <img src="" alt="">
+                </figure>
+
+                <div>
+                    <h4>Organize across</h4>
+                    <p>Ui designer</p>
+                </div>
+            </div>
         </div>
     </section>
 
