--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -332,9 +332,9 @@
 
     <section class="container">
 
-        <div>
+        <div class="testimonial-card">
             <figure>
-                <img src="" alt="">
+                <img src="/stars.png" alt="">
             </figure>
 
             <p>Slate helps you see how 
@@ -342,10 +342,10 @@
                 to work to reach your financial 
                 goal for the month and year.</p> 
 
-            <div>
+            <div class="profile">
 
                 <figure>
-                    <img src="" alt="">
+                    <img src="/Ellipse 2dp.png" alt="">
                 </figure>
 
                 <div>
