--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -332,27 +332,128 @@
 
     <section class="container">
 
-        <div class="testimonial-card">
-            <figure>
-                <img src="/stars.png" alt="">
-            </figure>
+        <div class="test">
 
-            <p>Slate helps you see how 
-                many more days you need 
-                to work to reach your financial 
-                goal for the month and year.</p> 
-
-            <div class="profile">
-
+            <div class="testimonial-card">
                 <figure>
-                    <img src="/Ellipse 2dp.png" alt="">
+                    <img src="/stars.png" alt="">
                 </figure>
-
-                <div>
-                    <h4>Organize across</h4>
-                    <p>Ui designer</p>
+    
+                <p class="margin-block">Slate helps you see how 
+                    many more days you need 
+                    to work to reach your financial 
+                    goal for the month and year.</p> 
+    
+                <div class="profile">
+    
+                    <figure>
+                        <img src="/Ellipse 2dp.png" alt="">
+                    </figure>
+    
+                    <div>
+                        <h4>Organize across</h4>
+                        <p>Ui designer</p>
+                    </div>
                 </div>
             </div>
+
+
+            <div class="testimonial-card">
+                <figure>
+                    <img src="/stars.png" alt="">
+                </figure>
+    
+                <p class="margin-block">Slate helps you see how 
+                    many more days you need 
+                    to work to reach your financial 
+                    goal for the month and year.</p> 
+    
+                <div class="profile">
+    
+                    <figure>
+                        <img src="/Ellipse 2dp.png" alt="">
+                    </figure>
+    
+                    <div>
+                        <h4>Organize across</h4>
+                        <p>Ui designer</p>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="testimonial-card">
+                <figure>
+                    <img src="/stars.png" alt="">
+                </figure>
+    
+                <p class="margin-block">Slate helps you see how 
+                    many more days you need 
+                    to work to reach your financial 
+                    goal for the month and year.</p> 
+    
+                <div class="profile">
+    
+                    <figure>
+                        <img src="/Ellipse 2dp.png" alt="">
+                    </figure>
+    
+                    <div>
+                        <h4>Organize across</h4>
+                        <p>Ui designer</p>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <div class="testimonial-card">
+                <figure>
+                    <img src="/stars.png" alt="">
+                </figure>
+    
+                <p class="margin-block">Slate helps you see how 
+                    many more days you need 
+                    to work to reach your financial 
+                    goal for the month and year.</p> 
+    
+                <div class="profile">
+    
+                    <figure>
+                        <img src="/Ellipse 2dp.png" alt="">
+                    </figure>
+    
+                    <div>
+                        <h4>Organize across</h4>
+                        <p>Ui designer</p>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="testimonial-card">
+                <figure>
+                    <img src="/stars.png" alt="">
+                </figure>
+    
+                <p class="margin-block">Slate helps you see how 
+                    many more days you need 
+                    to work to reach your financial 
+                    goal for the month and year.</p> 
+    
+                <div class="profile">
+    
+                    <figure>
+                        <img src="/Ellipse 2dp.png" alt="">
+                    </figure>
+    
+                    <div>
+                        <h4>Organize across</h4>
+                        <p>Ui designer</p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
