--- a/views/pricing.ejs
+++ b/views/pricing.ejs
@@ -457,6 +457,12 @@
         </div>
     </section>
 
+    <section class="container">
+
+        <button class="secondary-button">more testimonials </button>
+    </section>
+
+
     
 
 
@@ -475,6 +481,7 @@
         </div>
 
     </section>
+
 
 </main>
 
