--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -5,9 +5,9 @@
     <section class="container">
         <div class="sub">
 
-            <h3 class="neutral2">PRODUCT</h3>
+            <h3 class="neutral2">BLOG</h3>
 
-            <h1 class="secondary-color">A modular UI Kit for
+            <h1 class="secondary-color">Get Insights.
                 <br> <span class="primary-color"> quick deployment| </span></h1>
 
             <h3 class="neutral2">Most calendars are designed for teams. Slate is designed 
