--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -7,8 +7,7 @@
 
             <h3 class="neutral2">BLOG</h3>
 
-            <h1 class="secondary-color">Get Insights.
-                <br> <span class="primary-color"> quick deployment| </span></h1>
+            <h1 class="secondary-color">Get Insights.</h1>
 
             <h3 class="neutral2">Most calendars are designed for teams. Slate is designed 
                 <br> for freelancers</h3>
