--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -17,8 +17,31 @@
     </section>
 
 
-    <section>
+    <section class="container">
+        <div class="blog__posts">
 
+            <div>
+                <figure>
+                    <img src="" alt="">
+                </figure>
+
+                <div>
+                    <p>20 JUNE 2019</p>
+                    <h3>Life Tips From Top Ten 
+                        Adventure Travelers</h3>
+                    <p>Slate helps you see how many 
+                        more days you need to work to 
+                        reach.</p>
+                    
+                        <div>
+                            <p>Google</p> 
+                            <p>Trending</p>
+                            <p>New</p>
+                        </div>
+                </div>
+            </div>
+
+        </div>
     </section>
 
     
