--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -20,12 +20,12 @@
     <section class="container">
         <div class="blog__posts">
 
-            <div>
+            <div class="blog__card">
                 <figure>
-                    <img src="" alt="">
+                    <img src="/Pictureblog.png" alt="">
                 </figure>
 
-                <div>
+                <div class="blog__content">
                     <p>20 JUNE 2019</p>
                     <h3>Life Tips From Top Ten 
                         Adventure Travelers</h3>
@@ -33,7 +33,52 @@
                         more days you need to work to 
                         reach.</p>
                     
-                        <div>
+                        <div class="blog__tags">
+                            <p>Google</p> 
+                            <p>Trending</p>
+                            <p>New</p>
+                        </div>
+                </div>
+            </div>
+
+
+
+            <div class="blog__card">
+                <figure>
+                    <img src="/Pictureblog.png" alt="">
+                </figure>
+
+                <div class="blog__content">
+                    <p>20 JUNE 2019</p>
+                    <h3>Life Tips From Top Ten 
+                        Adventure Travelers</h3>
+                    <p>Slate helps you see how many 
+                        more days you need to work to 
+                        reach.</p>
+                    
+                        <div class="blog__tags">
+                            <p>Google</p> 
+                            <p>Trending</p>
+                            <p>New</p>
+                        </div>
+                </div>
+            </div>
+
+
+            <div class="blog__card">
+                <figure>
+                    <img src="/Pictureblog.png" alt="">
+                </figure>
+
+                <div class="blog__content">
+                    <p>20 JUNE 2019</p>
+                    <h3>Life Tips From Top Ten 
+                        Adventure Travelers</h3>
+                    <p>Slate helps you see how many 
+                        more days you need to work to 
+                        reach.</p>
+                    
+                        <div class="blog__tags">
                             <p>Google</p> 
                             <p>Trending</p>
                             <p>New</p>
