--- a/public/main.css
+++ b/public/main.css
@@ -416,6 +416,14 @@ nav figure {
     padding: 1.1rem;
 }
 
+.blog__tags {
+    display: flex;
+    align-items: center;
+    color: var(--primary-color);
+    gap: 1rem;
+    margin-block: 2rem;
+}
+
 footer figure {
     width: 10%;
 }
