--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -72,7 +72,7 @@
 
                 <div class="blog__content">
                     <p>20 JUNE 2019</p>
-                    <h3>Life Tips From Top Ten 
+                    <h3 class="secondary-color">Life Tips From Top Ten 
                         Adventure Travelers</h3>
                     <p>Slate helps you see how many 
                         more days you need to work to 
