--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -26,10 +26,10 @@
                 </figure>
 
                 <div class="blog__content">
-                    <p>20 JUNE 2019</p>
+                    <p class="margin--block">20 JUNE 2019</p>
                     <h3>Life Tips From Top Ten 
                         Adventure Travelers</h3>
-                    <p>Slate helps you see how many 
+                    <p class="margin--block">Slate helps you see how many 
                         more days you need to work to 
                         reach.</p>
                     
@@ -49,10 +49,10 @@
                 </figure>
 
                 <div class="blog__content">
-                    <p>20 JUNE 2019</p>
+                    <p class="margin--block">20 JUNE 2019</p>
                     <h3>Life Tips From Top Ten 
                         Adventure Travelers</h3>
-                    <p>Slate helps you see how many 
+                    <p class="margin--block">Slate helps you see how many 
                         more days you need to work to 
                         reach.</p>
                     
@@ -71,10 +71,10 @@
                 </figure>
 
                 <div class="blog__content">
-                    <p>20 JUNE 2019</p>
+                    <p class="margin--block">20 JUNE 2019</p>
                     <h3 class="secondary-color">Life Tips From Top Ten 
                         Adventure Travelers</h3>
-                    <p>Slate helps you see how many 
+                    <p class="margin--block">Slate helps you see how many 
                         more days you need to work to 
                         reach.</p>
                     
