--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -45,7 +45,7 @@
 
             <div class="blog__card">
                 <figure>
-                    <img src="/Pictureblog.png" alt="">
+                    <img src="/Pictureblog-1.png" alt="">
                 </figure>
 
                 <div class="blog__content">
@@ -67,7 +67,7 @@
 
             <div class="blog__card">
                 <figure>
-                    <img src="/Pictureblog.png" alt="">
+                    <img src="/Pictureblog-2.png" alt="">
                 </figure>
 
                 <div class="blog__content">
@@ -85,6 +85,74 @@
                         </div>
                 </div>
             </div>
+
+
+            <div class="blog__card">
+                <figure>
+                    <img src="/Pictureblog-3.png" alt="">
+                </figure>
+
+                <div class="blog__content">
+                    <p class="margin--block">20 JUNE 2019</p>
+                    <h3>Life Tips From Top Ten 
+                        Adventure Travelers</h3>
+                    <p class="margin--block">Slate helps you see how many 
+                        more days you need to work to 
+                        reach.</p>
+                    
+                        <div class="blog__tags">
+                            <p>Google</p> 
+                            <p>Trending</p>
+                            <p>New</p>
+                        </div>
+                </div>
+            </div>
+
+
+
+            <div class="blog__card">
+                <figure>
+                    <img src="/Pictureblog-4.png" alt="">
+                </figure>
+
+                <div class="blog__content">
+                    <p class="margin--block">20 JUNE 2019</p>
+                    <h3>Life Tips From Top Ten 
+                        Adventure Travelers</h3>
+                    <p class="margin--block">Slate helps you see how many 
+                        more days you need to work to 
+                        reach.</p>
+                    
+                        <div class="blog__tags">
+                            <p>Google</p> 
+                            <p>Trending</p>
+                            <p>New</p>
+                        </div>
+                </div>
+            </div>
+
+
+            <div class="blog__card">
+                <figure>
+                    <img src="/Pictureblog-5.png" alt="">
+                </figure>
+
+                <div class="blog__content">
+                    <p class="margin--block">20 JUNE 2019</p>
+                    <h3 class="secondary-color">Life Tips From Top Ten 
+                        Adventure Travelers</h3>
+                    <p class="margin--block">Slate helps you see how many 
+                        more days you need to work to 
+                        reach.</p>
+                    
+                        <div class="blog__tags">
+                            <p>Google</p> 
+                            <p>Trending</p>
+                            <p>New</p>
+                        </div>
+                </div>
+            </div>
+
 
         </div>
     </section>
