--- a/views/vision.ejs
+++ b/views/vision.ejs
@@ -2,8 +2,25 @@
 
 <main>
 
-    <section>
-        
+    <section class="vision-screen">
+
+        <div>
+            <h4>Design</h4>
+            <h2>Unveiling our new vision </h2>
+            <p>20 JUNE 2019</p>
+
+            <div>
+                <figure>
+                    <img src="" alt="">
+                </figure>
+
+                <div>
+                    <p>Organize across</p>
+                    <p>Ui designer</p>
+                </div>
+            </div>
+        </div>
+
     </section>
 
 </main>
