--- a/views/vision.ejs
+++ b/views/vision.ejs
@@ -5,22 +5,31 @@
     <section class="vision-screen">
 
         <div>
-            <h4>Design</h4>
-            <h2>Unveiling our new vision </h2>
-            <p>20 JUNE 2019</p>
+            <h4 class="margin--block neutral2">Design</h4>
+            <h2 class="secondary-color">Unveiling our new vision </h2>
+            <p class="margin--block neutral2">20 JUNE 2019</p>
 
-            <div>
+            <div class="prfile">
                 <figure>
-                    <img src="" alt="">
+                    <img src="/Ellipse 2vision.png" alt="">
                 </figure>
 
                 <div>
-                    <p>Organize across</p>
+                    <p class="primary-color">Organize across</p>
                     <p>Ui designer</p>
                 </div>
             </div>
         </div>
 
+    </section>
+
+
+    <section class="vision-screen">
+        <h2 class="margin--block">Intro to article</h2>
+
+        <figure>
+            <img src="/Frame 38vision.png" alt="">
+        </figure>
     </section>
 
 </main>
