--- a/views/vision.ejs
+++ b/views/vision.ejs
@@ -27,9 +27,22 @@
     <section class="vision-screen">
         <h2 class="margin--block">Intro to article</h2>
 
-        <figure>
+        <figure class="margin--block">
             <img src="/Frame 38vision.png" alt="">
         </figure>
+
+        <p class="margin--block">
+            Tempor enim consequat exercitation dolor et esse deserunt labore pariatur 
+exercitation veniam consequat ex tempor. Nulla laboris Lorem aute labore nisi 
+laborum do sunt. Laborum elit qui et sint Lorem qui. Eu occaecat eu aliquip sint 
+fugiat duis magna officia. Et minim exercitation pariatur dolor dolore. Dolor ad 
+esse aute dolor nostrud quis eiusmod amet mollit fugiat elit officia. Cillum enim 
+dolor labore veniam labore in deserunt sit veniam irure ex officia.
+        </p>
+
+        <p class="margin--block">
+            Enim nulla voluptate aliquip duis et consectetur cillum est. Culpa nostrud nisi sint voluptate id. Esse consectetur sit ut reprehenderit deserunt laborum minim nulla et.Duis consequat amet laboris non aute elit ad cillum dolor irure ex enim exercitation. Pariatur laboris occaecat elit ex aliquip quis nisi officia minim labore aliquip officia sit ut. Aliquip nisi commodo commodo duis amet cupidatat ut magna veniam magna duis adipisicing pariatur. 
+        </p>
     </section>
 
 </main>
