--- a/views/vision.ejs
+++ b/views/vision.ejs
@@ -53,6 +53,20 @@ placeat facere possimus,
         </h3>
     </section>
 
+
+    <section class="vision-screen">
+
+        <h2>1 - Tempor enim consequat </h2>
+
+        <p class="margin--block">Tempor enim consequat exercitation dolor et esse deserunt labore pariatur 
+            exercitation veniam consequat ex tempor. Nulla laboris Lorem aute labore nisi 
+            laborum do sunt. Laborum elit qui et sint Lorem qui. Eu occaecat eu aliquip sint 
+            fugiat duis magna officia. Et minim exercitation pariatur dolor dolore. Dolor ad 
+            esse aute dolor nostrud quis eiusmod amet mollit fugiat elit officia. Cillum enim 
+            dolor labore veniam labore in deserunt sit veniam irure ex officia.</p>
+
+    </section>
+
 </main>
 
 
