added new section

--- a/views/vision.ejs
+++ b/views/vision.ejs
@@ -72,6 +72,71 @@ placeat facere possimus,
 
     </section>
 
+    <section class="container">
+        <div class="blog__card">
+            <figure>
+                <img src="/Pictureblog-5.png" alt="">
+            </figure>
+
+            <div class="blog__content">
+                <p class="margin--block">20 JUNE 2019</p>
+                <h3 class="secondary-color">Life Tips From Top Ten 
+                    Adventure Travelers</h3>
+                <p class="margin--block">Slate helps you see how many 
+                    more days you need to work to 
+                    reach.</p>
+                
+                    <div class="blog__tags">
+                        <p>Google</p> 
+                        <p>Trending</p>
+                        <p>New</p>
+                    </div>
+            </div>
+        </div>
+
+        <div class="blog__card">
+            <figure>
+                <img src="/Pictureblog-5.png" alt="">
+            </figure>
+
+            <div class="blog__content">
+                <p class="margin--block">20 JUNE 2019</p>
+                <h3 class="secondary-color">Life Tips From Top Ten 
+                    Adventure Travelers</h3>
+                <p class="margin--block">Slate helps you see how many 
+                    more days you need to work to 
+                    reach.</p>
+                
+                    <div class="blog__tags">
+                        <p>Google</p> 
+                        <p>Trending</p>
+                        <p>New</p>
+                    </div>
+            </div>
+        </div>
+
+        <div class="blog__card">
+            <figure>
+                <img src="/Pictureblog-5.png" alt="">
+            </figure>
+
+            <div class="blog__content">
+                <p class="margin--block">20 JUNE 2019</p>
+                <h3 class="secondary-color">Life Tips From Top Ten 
+                    Adventure Travelers</h3>
+                <p class="margin--block">Slate helps you see how many 
+                    more days you need to work to 
+                    reach.</p>
+                
+                    <div class="blog__tags">
+                        <p>Google</p> 
+                        <p>Trending</p>
+                        <p>New</p>
+                    </div>
+            </div>
+        </div>
+    </section>
+
 </main>
 
 
