added new section

--- a/views/vision.ejs
+++ b/views/vision.ejs
@@ -137,6 +137,23 @@ placeat facere possimus,
         </div>
     </section>
 
+    <section class="container bg-color">
+
+        <div class="sub">
+            <h2 class="neutral1">A modular UI Kit</h2>
+
+            <h4 class="neutral1">Most calendars are designed for teams. 
+                Slate is designed for freelancers</h4>
+
+                <div>
+                    <button class="secondary-button">Buy now</button>
+                <button class="secondary-button2">Try for free</button>
+                </div>
+        </div>
+
+    </section>
+
+
 </main>
 
 
