--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -22,6 +22,7 @@
                         <li><a href="/product">Product</a></li>
                         <li><a href="/product/product-list">Product Listing</a></li>
                         <li><a href="/pricing">Pricing</a></li>
+                        <li><a href="/index">One Index</a></li>
                         <li><a href="">Contact</a></li>
                     </ul>
 
