--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,18 @@
 <%- include("./includes/header") %>
 
+<section class="container">
+    <div class="sub">
 
+        <h3 class="neutral2">BLOG</h3>
+
+        <h1 class="secondary-color">Get Insights.</h1>
+
+        <h3 class="neutral2">Most calendars are designed for teams. Slate is designed 
+            <br> for freelancers</h3>
+
+        <button type="submit" href="/product-list" class="secondary-button">Buy Now</button>
+    </div>
+</section>
 
 
 
