--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,9 @@
 <section class="container">
     <div class="sub">
 
-        <h3 class="neutral2">BLOG</h3>
+        <h3 class="neutral2">TYPE</h3>
 
-        <h1 class="secondary-color">Get Insights.</h1>
+        <h1 class="secondary-color">Powerful. Simplicity...</h1>
 
         <h3 class="neutral2">Most calendars are designed for teams. Slate is designed 
             <br> for freelancers</h3>
