--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,7 @@
 
         <h1 class="secondary-color">Powerful. Simplicity...</h1>
 
-        <h3 class="neutral2">Most calendars are designed for teams. Slate is designed 
-            <br> for freelancers</h3>
+        <h3 class="neutral2">Just type what's on your mind</h3>
 
         <button type="submit" href="/product-list" class="secondary-button">Buy Now</button>
     </div>
