--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,12 @@
 
         <button type="submit" href="/product-list" class="secondary-button">Buy Now</button>
     </div>
+
+     <section>
+        <div>
+            
+        </div>
+     </section>
 </section>
 
 
