--- a/public/main.css
+++ b/public/main.css
@@ -433,7 +433,8 @@ nav figure {
     transform: scale(1.1);
 }
 .ss {
-    display: ;
+    display: flex;
+    flex-direction: column;
 }
 
 .vision-screen {
