--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,11 @@
 
      <section>
         <div>
-            
+
+            <section>
+                
+            </section>
+
         </div>
      </section>
 </section>
